...
                                        <rect key="frame" x="0.0" y="64" width="320" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="seO-G7-n3z" id="0Wu-L6-Udv">
                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Day off" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="5yG-bG-ycv">
                                                    <rect key="frame" x="15" y="5" width="53" height="20"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Warns your colleagues if you are not working at specified date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="yul-Mq-BCM">
                                                    <rect key="frame" x="15" y="25" width="270" height="14"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                <accessibility key="accessibilityConfiguration" identifier="DateField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P5U-bd-2iL">
                                <rect key="frame" x="20" y="72" width="280" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="EnterDateAction"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="1Xt-za-OTn"/>
                                </constraints>
                                <connections>
                                    <action selector="dateFieldTapped:" destination="i2B-yc-z3G" eventType="touchUpInside" id="RDD-zj-ZYm"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Additional note" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="17h-Mg-Ji1">
                                <rect key="frame" x="20" y="110" width="280" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="AdditionalNoteField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                <connections>
                                    <outlet property="delegate" destination="i2B-yc-z3G" id="eQa-5i-PtV"/>
                                </connections>
                            </textField>
                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tzQ-8A-eSy" customClass="DatePickerView">
                                <rect key="frame" x="0.0" y="362" width="320" height="206"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="DatePickerView">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
...
