...
                    <rect key="frame" x="266" y="7" width="46" height="30"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="46" id="04h-1m-TMw"/>
                        <constraint firstAttribute="height" constant="30" id="sR0-dE-4XB"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
                    <state key="normal" title="Done">
                        <color key="titleColor" red="0.1176470588" green="0.68235294120000001" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                    </state>
                    <connections>
                        <action selector="accessoryViewDoneTapped:" destination="-1" eventType="touchUpInside" id="CC6-ab-rRe"/>
                    </connections>
...
