...
        || self.mailCaseType == WorkMailCaseTypeEarlyGone
        || self.mailCaseType == WorkMailCaseTypeDelay) {
        
        if (!self.date) {
            *error = [NSError errorWithDomain:@"domain"
                                         code:-1
                                     userInfo:@{NSLocalizedDescriptionKey : @"Error",
                                                NSLocalizedFailureReasonErrorKey : @"No date specified"}];
            return NO;
        }
    }
    
    else if (self.mailCaseType == WorkMailCaseTypeWeekPlan) {
...
