...
    [controller dismissViewControllerAnimated:YES completion:nil];
}

#pragma mark - UIAlertController -

- (UIAlertAction *)okayAction {
    return [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleCancel handler:nil];
}

- (void)present:(NSError *)error {
    if (self.alertController.presentingViewController == self) {
        return;
    }
...
